-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (...workspace/open/src/hotspot/share/opto/memnode.cpp:907), pid=8703, tid=8718
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2021-10-22-0938526.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2021-10-22-0938526.tobias.hartmann.valhalla, compiled mode, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x14d9e7a] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, unsigned char)+0x23a
Current CompileTask:
C2: 18758 3495 b compiler.valhalla.inlinetypes.TestArrays::test27_verifier (82 bytes)
Stack: [0x00007fee109fa000,0x00007fee10afb000], sp=0x00007fee10af5930, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14d9e7a] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, unsigned char)+0x23a
V [libjvm.so+0x67e63d] BarrierSetC2::load_at_resolved(C2Access&, Type const*) const+0x26d
V [libjvm.so+0xc4dc9f] G1BarrierSetC2::load_at_resolved(C2Access&, Type const*) const+0xcf
V [libjvm.so+0x67cbfd] BarrierSetC2::load_at(C2Access&, Type const*) const+0xed
V [libjvm.so+0x5e71dd] ArrayCopyNode::load(BarrierSetC2*, PhaseGVN*, Node*&, MergeMemNode*, Node*, TypePtr const*, Type const*, BasicType)+0xbd
V [libjvm.so+0x13cb8e8] PhaseMacroExpand::make_arraycopy_load(ArrayCopyNode*, long, Node*, Node*, BasicType, Type const*, AllocateNode*)+0x8d8
V [libjvm.so+0x13cacb1] PhaseMacroExpand::value_from_mem(Node*, Node*, BasicType, Type const*, TypeOopPtr const*, AllocateNode*)+0x631
V [libjvm.so+0x13cc0f8] PhaseMacroExpand::inline_type_from_mem(Node*, Node*, ciInlineKlass*, TypeAryPtr const*, int, AllocateNode*)+0x1e8
V [libjvm.so+0x13cc8d6] PhaseMacroExpand::scalar_replacement(AllocateNode*, GrowableArray<SafePointNode*>&)+0x5d6
V [libjvm.so+0x13cf46e] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x2be
V [libjvm.so+0x13cfa2b] PhaseMacroExpand::eliminate_macro_nodes()+0x2eb
V [libjvm.so+0xa527ce] Compile::Optimize()+0x187e
V [libjvm.so+0xa54066] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1656
V [libjvm.so+0x847f00] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6a0
V [libjvm.so+0xa64269] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
V [libjvm.so+0xa64ec8] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x1977c0c] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x197e1c0] Thread::call_run()+0x100
V [libjvm.so+0x162ea54] thread_native_entry(Thread*)+0x104
#
# Internal Error (...workspace/open/src/hotspot/share/opto/memnode.cpp:907), pid=8703, tid=8718
# Error: ShouldNotReachHere()
#
# JRE version: Java(TM) SE Runtime Environment (18.0) (fastdebug build 18-lworld3ea+0-2021-10-22-0938526.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-lworld3ea+0-2021-10-22-0938526.tobias.hartmann.valhalla, compiled mode, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x14d9e7a] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, unsigned char)+0x23a
Current CompileTask:
C2: 18758 3495 b compiler.valhalla.inlinetypes.TestArrays::test27_verifier (82 bytes)
Stack: [0x00007fee109fa000,0x00007fee10afb000], sp=0x00007fee10af5930, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14d9e7a] LoadNode::make(PhaseGVN&, Node*, Node*, Node*, TypePtr const*, Type const*, BasicType, MemNode::MemOrd, LoadNode::ControlDependency, bool, bool, bool, unsigned char)+0x23a
V [libjvm.so+0x67e63d] BarrierSetC2::load_at_resolved(C2Access&, Type const*) const+0x26d
V [libjvm.so+0xc4dc9f] G1BarrierSetC2::load_at_resolved(C2Access&, Type const*) const+0xcf
V [libjvm.so+0x67cbfd] BarrierSetC2::load_at(C2Access&, Type const*) const+0xed
V [libjvm.so+0x5e71dd] ArrayCopyNode::load(BarrierSetC2*, PhaseGVN*, Node*&, MergeMemNode*, Node*, TypePtr const*, Type const*, BasicType)+0xbd
V [libjvm.so+0x13cb8e8] PhaseMacroExpand::make_arraycopy_load(ArrayCopyNode*, long, Node*, Node*, BasicType, Type const*, AllocateNode*)+0x8d8
V [libjvm.so+0x13cacb1] PhaseMacroExpand::value_from_mem(Node*, Node*, BasicType, Type const*, TypeOopPtr const*, AllocateNode*)+0x631
V [libjvm.so+0x13cc0f8] PhaseMacroExpand::inline_type_from_mem(Node*, Node*, ciInlineKlass*, TypeAryPtr const*, int, AllocateNode*)+0x1e8
V [libjvm.so+0x13cc8d6] PhaseMacroExpand::scalar_replacement(AllocateNode*, GrowableArray<SafePointNode*>&)+0x5d6
V [libjvm.so+0x13cf46e] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x2be
V [libjvm.so+0x13cfa2b] PhaseMacroExpand::eliminate_macro_nodes()+0x2eb
V [libjvm.so+0xa527ce] Compile::Optimize()+0x187e
V [libjvm.so+0xa54066] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1656
V [libjvm.so+0x847f00] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6a0
V [libjvm.so+0xa64269] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc39
V [libjvm.so+0xa64ec8] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x1977c0c] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x197e1c0] Thread::call_run()+0x100
V [libjvm.so+0x162ea54] thread_native_entry(Thread*)+0x104