8275797: [lworld] Scalar replacement fails with ShouldNotReachHere() due to unexpected load type